# repo-trust-scan

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml  spec.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_request.yml
.github/workflows/: ci.yml  release.yml
docs/: rules.md  threat-model.md
examples/: trusted-policy.json
examples/risky-repo/: .mcp.json  AGENTS.md  package.json
examples/risky-repo/.github/hooks/: session.json
repo_trust_scan/: __init__.py  baseline.py  cli.py  models.py  policy.py  rules.py  sarif.py
tests/: test_cli.py  test_scanner.py
